--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="Assets/css/style.css">
+    <link rel="stylesheet" href="Assets/font/Rajdhani/Rajdhani-Medium.ttf">
+    <link rel="stylesheet" href="Assets/font/Space_Grotesk/static/SpaceGrotesk-Bold.ttf">
+    <link rel="stylesheet" href="Assets/font/Space_Grotesk/static/SpaceGrotesk-Regular.ttf">
+    <link rel="stylesheet" href="Assets/font/Space_Grotesk/SpaceGrotesk-VariableFont_wght.ttf">
+    <title>BATMAN | HOME</title>
+    <style>
+        body{
+            background-image: url("Assets/Illustrations/Bathome1.png");
+            background-color: black;
+            background-repeat: no-repeat;
+            background-size: contain;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <!-- HEADER -->
@@ -14,11 +27,13 @@
             <div class="logo">
                 <img src="Assets/Logos/logohome.png" alt="logo batman">
             </div>
-            <div class="nav">
+            <!-- <div class="nav_list"> -->
                 <ul>
-                    <li>home</li>
+                    <li><a href="">home</a></li>
+                    <!-- <li><a href="">home2</a></li> -->
+                    <!-- <li><a href="">home3</a></li> -->
                 </ul>
-            </div>
+            <!-- </div> -->
         </nav>
     </header>
     <!-- END HEADER -->
@@ -31,11 +46,11 @@
                         Au nom de ses parents assassinés, Bruce Wayne mène une guerre éternelle contre les 
                         criminels de Gotham City. Il est vengeur. Il est la nuit.
                     </p>
-                    <h1>il est batman</h1>
+                    <h1>Il est Batman</h1>
                 </div>
                 <div class="banner_btn">
-                    <button class="btn">voir les héros</button>
-                    <button class="btn">les adversaires</button>
+                    <a href="#batman" class="btn">voir les héros</a>
+                    <a href="#nemesis" class="btn">les adversaires</a>
                 </div>
             </div>
             <div class="banner_arrow">
@@ -43,6 +58,18 @@
             </div>
         </div>
         <!-- END BANNER -->
+
+        <!-- SIDE SOCIAL NETWORK BOX -->
+        <!-- <div class="side_box">
+            <div class="arrow_up"></div>
+            <div class="social_icon">
+                <img src="Assets/Logos/icon_facebook.png" alt="Facebook">
+                <img src="Assets/Logos/icon_ig.png" alt="Instagram">
+                <img src="Assets/Logos/icon_tw.png" alt="Twitter">
+            </div>
+            <div class="arrow_down"></div>
+        </div> -->
+        <!-- END BOX -->
 
         <div class="transform">
             <!-- BATMAN AU CINEMA -->
@@ -61,15 +88,15 @@
                 <div class="row_card">
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome2.png" alt="Robert Pattinson est Batman">
-                        <h4>Robert Pattinson (2022)</h4>
+                        <h4>Robert Pattinson <br>(2022)</h4>
                     </div>
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome3.png" alt="Christian Bale est Batman">
-                        <h4>Christian Bale (2006 - 2008 - 2012</h4>
+                        <h4>Christian Bale <br>(2006 - 2008 - 2012)</h4>
                     </div>
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome4.png" alt="Ben Affleck est Batman">
-                        <h4>Ben Affleck (2016- 2017/2020 – 2023)</h4>
+                        <h4>Ben Affleck <br>(2016- 2017/2020 – 2023)</h4>
                     </div>
                 </div>
             </section>
@@ -92,22 +119,23 @@
                 <div class="row_card">
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome5.png" alt="Paul Dano (The Riddler)">
-                        <h4>The Riddler - Paul Dano(2022)</h4>
+                        <h4>The Riddler - Paul Dano <br>(2022)</h4>
                     </div>
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome6.png" alt="Heath Ledger (Le Joker)">
-                        <h4>Le Joker - Heath Ledger (2008)</h4>
+                        <h4>Le Joker - Heath Ledger <br>(2008)</h4>
                     </div>
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome7.png" alt="Ray Porter (Darkseid)">
-                        <h4>Darkseid - Ray Porter (2022)</h4>
+                        <h4>Darkseid - Ray Porter <br>(2022)</h4>
                     </div>
                 </div>
             </section>
             <!-- END SECTION -->
 
             <!-- SECTION ALLIES -->
-            <section id="batman">
+            <section id="allies">
+                <img class="bat" src="Assets/Illustrations/Bathome12.png" alt="batman">
                 <div class="section_text">
                     <h2>alliés</h2>
                     <p>
@@ -122,22 +150,22 @@
                 <div class="row_card">
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome9.png" alt="Michael Cain (Alfred Pennyworth)">
-                        <h4>Alfred Pennyworth - Michael Cain (2006 - 2008 - 2012)</h4>
+                        <h4>Alfred Pennyworth - Michael Cain <br>(2006 - 2008 - 2012)</h4>
                     </div>
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome8.png" alt="Zoé Kravitz (Catwoman)">
-                        <h4>Catwoman - Zoé Kravitz (2008)</h4>
+                        <h4>Catwoman - Zoé Kravitz <br>(2008)</h4>
                     </div>
                     <div class="card">
                         <img src="Assets/Illustrations/Bathome10.png" alt="James Gordon">
-                        <h4>James Gordon (2014-2019)</h4>
+                        <h4>James Gordon <br>(2014-2019)</h4>
                     </div>
                 </div>
             </section>
             <!-- END SECTION -->
 
             <!-- SECTION JUSTICE LEAGUE -->
-            <section>
+            <section id="league">
                 <div>
                     <h2>JUSTICE LEAGUE</h2>
                     <p>
@@ -148,13 +176,16 @@
                         surnaturelles menacent son existence.
                     </p>
                 </div>
-                <img src="Assets/Illustrations/Bathome10.png" alt="Justice League">
+                <div class="league_carousel">
+                    <img class="league" src="Assets/Illustrations/Bathome11.png" alt="Justice League">
+                </div>
             </section>
+
             <!-- END SECTION -->
         </div>
         
         <!-- SECTION MULTIMEDIA -->
-        <section>
+        <section id="multimedia">
             <h2>multimédia</h2>
             <!-- carousel -->
             <div class="carousel">
@@ -217,7 +248,7 @@
         </section>
 
         <!-- SECTION CONTACT -->
-        <section>
+        <section id="contact">
             <h2>prenons contact</h2>
             <div>
                 <div class="mail">
