--- a/index.html
+++ b/index.html
@@ -249,44 +249,52 @@
         </section>
 
         <!-- SECTION CONTACT -->
-        <!-- <section id="newsletter">
+        <section id="newsletter">
             <div class="container">
-                <h2>prenons contact</h2>
-                <form action="">
-                    <div class="mail">
-                        <h4>Adresse email</h4>
-                        <input type="text" placeholder="Adresse email">
-                    </div>
-                    <div class="newletter">
-                        <h4>newletter</h4>
-                        <p>En cochant cette case vous acceptez de recevoir l’actualité concernant les aventures de 
-                            Batman : <input type="checkbox" name="" id="">
-                        </p>
-                        <select name="" id="">
-                            <option value="" disabled>Choisissez la fréquence à laquelle vous souhaitez recevoir votre newsletter</option>
-                            <option value="">Une fois par semaine</option>
-                            <option value="">Une fois toutes les deux semaines (2 fois par mois)</option>
-                            <option value="">Une fois par mois</option>
-                            <option value="">Une fois tous les trois mois</option>
-                            <option value="">Une fois tous les six mois </option>
-                        </select>
-                        <div>
-                            <p>Souhaitez-vous recevoir des news</p>
-                            <div class="newsletter_choose">
-                                <button class="btn_sm">Des films</button>
-                                <button class="btn_sm">Des comics</button>
-                                <button class="btn_sm">De tout</button>
+                <div class="col">
+                    <h2>prenons contact</h2>
+                    <form action="">
+                        <div class="row mail">
+                            <h4>Adresse email</h4>
+                            <div class="input">
+                                <input id="email" type="text" placeholder="Adresse email">
                             </div>
                         </div>
-                    </div>
-                    <div class="message">
-                        <h4>Message</h4>
-                        <input type="text" placeholder="Laissez un commentaire pour la communauté">
-                    </div>
-                    <a href="" class="btn">CONFIRMER</a>
-                </form>
+                        <div class="row condition">
+                            <h4>newletter</h4>
+                            <p>En cochant cette case vous acceptez de recevoir l’actualité concernant les aventures de 
+                                Batman :   <input type="checkbox" name="" id="">
+                            </p>
+                            <div class="input">
+                                <select name="" id="">
+                                    <option value="">Choisissez la fréquence à laquelle vous souhaitez recevoir votre newsletter</option>
+                                    <option value="">Une fois par semaine</option>
+                                    <option value="">Une fois toutes les deux semaines (2 fois par mois)</option>
+                                    <option value="">Une fois par mois</option>
+                                    <option value="">Une fois tous les trois mois</option>
+                                    <option value="">Une fois tous les six mois </option>
+                                </select>
+                            </div>
+                            <div>
+                                <p>Souhaitez-vous recevoir des news</p>
+                                <div class="newsletter_choose">
+                                    <a href="#" class="btn_sm">Des films</a>
+                                    <a href="#" class="btn_sm">Des comics</a>
+                                    <a href="#" class="btn_sm">De tout</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row message">
+                            <h4>Message</h4>
+                            <div class="input">
+                                <input type="text" placeholder="Laissez un commentaire pour la communauté">
+                            </div>
+                        </div>
+                        <a href="#" class="btn">CONFIRMER</a>
+                    </form>
+                </div>
             </div>
-        </section> -->
+        </section>
         <!-- END SECTION -->
 
         <!-- SECTION REPLIQUE -->
