--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Assets/css/style.css">
+    <link rel="stylesheet" href="./Assets/style/main.css">
     <link rel="stylesheet" href="Assets/font/Rajdhani/Rajdhani-Medium.ttf">
     <link rel="stylesheet" href="Assets/font/Space_Grotesk/static/SpaceGrotesk-Bold.ttf">
     <link rel="stylesheet" href="Assets/font/Space_Grotesk/static/SpaceGrotesk-Regular.ttf">
@@ -29,8 +29,8 @@
             </div>
             <ul>
                 <li><a class="home" href="#up">home</a></li>
-                <!-- <li><a href="">home2</a></li>
-                <li><a href="">home3</a></li> -->
+                <li><a href="">GAME</a></li>
+                <!-- <li><a href="">home3</a></li> -->
             </ul>
         </nav>
     </header>
